--- a/home.html
+++ b/home.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Geek Universe</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <header>
+        <p>Lorem ipsum</p>
+    </header>
+    <main>
+        <p>Lorem ipsum</p>
+    </main>
 </body>
 </html>
