--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <p>Lorem ipsum</p>
+        <p>Geek Universe</p>
     </header>
     <main>
         <p>Lorem ipsum</p>
