--- a/home.html
+++ b/home.html
@@ -1,19 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geek Universe</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <p>Geek Universe</p>
+        <h1>Geek Universe</h1>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li><a href="joao.html">Terraria</a></li>
+                <li><a href="thaty.html">The Sims 4</a></li>
+                <li><a href="thalles.html">Final Fantasy VI</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <p>Lorem ipsum</p>
-    </main>
-</body>
+
+
+    <h2>Jogos Abordados</h2>
+    <p>Clique sobre a imagem do jogo para acessar as páginas com detalhes.</p>
+
+    <div class="linha">
+        <div class="jogo">
+            <h3>Terraria</h3>
+            <a href="joao.html">
+                <img src="imagens/terraria.jpg" alt="Terraria, o jogo onde voce joga até não aguentar mais" class="opacidade">
+            </a>
+        </div>
+        <div class="jogo">
+            <h3>The Sims 4</h3>
+            <a href="thaty.html">
+                <img src="imagens/ts4.png" alt="The Sims 4, o ápice do jogo de ter uma segunda vida." class="opacidade">
+            </a>
+        </div>
+		<div class="jogo">
+            <h3>Final Fantasy VI</h3>
+            <a href="thalles.html">
+                <img src="imagens/ff6.jpg" alt="Final Fantasy VI, um clássico do SNES." class="opacidade">
+            </a>
+        </div>
+    </div>
+ </body>
 </html>
