--- a/thalles.html
+++ b/thalles.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Geek Universe</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <title>Final Fantasy VI</title>
 </head>
 <body>
-    <header>
-        <p>Lorem ipsum</p>
+	<header>
+        <h1>Geek Universe</h1>
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="joao.html">Terraria</a></li>
+                <li><a href="thaty.html">The Sims 4</a></li>
+                <li>Final Fantasy VI</li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <p>Lorem ipsum</p>
-    </main>
+    <h2>
+        Final Fantasy VI
+    </h2>
+    <img src="imagens/ff6.jpg" alt="Final Fantasy VI, um clássico do SNES.">
+        <div class="bio">
+            <p>
+                Grande clássico rpg do SNES, e se a linha Final Fantasy se tornou o que é hoje, essa grandiosidade teve sua explosão nesse jogo.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
