--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
         <div class="jogo">
             <h3>Terraria</h3>
             <a href="joao.html">
-                <img src="imagens/terraria.jpg" alt="Terraria, o jogo onde voce joga até não aguentar mais" class="opacidade">
+                <img src="imagens/terraria.png" alt="Terraria, o jogo onde voce joga até não aguentar mais" class="opacidade">
             </a>
         </div>
         <div class="jogo">
@@ -43,7 +43,7 @@
 		<div class="jogo">
             <h3>Final Fantasy VI</h3>
             <a href="thalles.html">
-                <img src="imagens/ff6.jpg" alt="Final Fantasy VI, um clássico do SNES." class="opacidade">
+                <img src="imagens/ff6.png" alt="Final Fantasy VI, um clássico do SNES." class="opacidade">
             </a>
         </div>
     </div>
