--- a/joao.html
+++ b/joao.html
@@ -25,7 +25,7 @@
     <h2>
         Terraria
     </h2>
-    <img src="imagens/terraria.jpg" alt="Terraria, o jogo onde voce joga até não aguentar mais">
+    <img src="imagens/terraria.png" alt="Terraria, o jogo onde voce joga até não aguentar mais">
         <div class="bio">
             <p>
                 Irineu, voce não sabe nem eu
