--- a/thalles.html
+++ b/thalles.html
@@ -25,7 +25,7 @@
     <h2>
         Final Fantasy VI
     </h2>
-    <img src="imagens/ff6.jpg" alt="Final Fantasy VI, um clássico do SNES.">
+    <img src="imagens/ff6.png" alt="Final Fantasy VI, um clássico do SNES.">
         <div class="bio">
             <p>
                 Grande clássico rpg do SNES, e se a linha Final Fantasy se tornou o que é hoje, essa grandiosidade teve sua explosão nesse jogo.
