--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
 
-
+    <main>
     <h2>Jogos Abordados</h2>
     <p>Clique sobre a imagem do jogo para acessar as páginas com detalhes.</p>
 
@@ -47,5 +47,6 @@
             </a>
         </div>
     </div>
+    </main>
  </body>
 </html>
