--- a/thalles.html
+++ b/thalles.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
     <title>Final Fantasy VI</title>
+    <script defer src="main.js"></script>
 </head>
 <body>
 	<header>
