--- a/joao.html
+++ b/joao.html
@@ -27,10 +27,9 @@
         Terraria
     </h2>
     <img src="imagens/terraria.png" alt="Terraria, o jogo onde voce joga até não aguentar mais">
-        <div class="bio">
-            <p>
-                Irineu, voce não sabe nem eu
-            </p>
-    </div>
+    <h3 id="titulo"></h3>
+    <p id="texto"></p><br>
+    <input id="sinopse" type="submit" value="Sinópse">
+    <input id="dados" type="submit" value="Dados">
 </body>
 </html>
