--- a/thalles.html
+++ b/thalles.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
     <title>Final Fantasy VI</title>
-    <script defer src="main.js"></script>
+    <script defer src="js/thalles.js"></script>
 </head>
 <body>
 	<header>
@@ -27,11 +27,9 @@
         Final Fantasy VI
     </h2>
     <img src="imagens/ff6.png" alt="Final Fantasy VI, um clássico do SNES.">
-        <div class="bio">
-            <p>
-                Grande clássico rpg do SNES, e se a linha Final Fantasy se tornou o que é hoje, essa grandiosidade teve sua explosão nesse jogo.
-            </p>
-        </div>
-    </div>
+    <h3 id="titulo"></h3>
+    <p id="texto"></p><br>
+    <input id="sinopse" type="submit" value="Sinópse">
+    <input id="dados" type="submit" value="Dados">
 </body>
 </html>
