--- a/joao.html
+++ b/joao.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
     <title>Terraria</title>
-    <script defer src="main.js"></script>
+    <script defer src="js/joao.js"></script>
 </head>
 <body>
 	<header>
