--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-    <script defer src="main.js"></script>
+    <script defer src="js/main.js"></script>
 </head>
 <body>
     <header>
