--- a/thaty.html
+++ b/thaty.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
     <title>The Sims 4</title>
-    <script defer src="main.js"></script>
+    <script defer src="js/thaty.js"></script>
 </head>
 <body>
 	<header>
@@ -27,10 +27,9 @@
         The Sims 4
     </h2>
     <img src="imagens/ts4.png" alt="The Sims 4, o ápice do jogo de ter uma segunda vida.">
-        <div class="bio">
-            <p>
-                Um jogo onde voce cuida da sua vida, mas a de mentirinha, porque a de verdade voce está deixando pra lá pra jogar isso aqui
-            </p>
-    </div>
+    <h3 id="titulo"></h3>
+    <p id="texto"></p><br>
+    <input id="sinopse" type="submit" value="Sinópse">
+    <input id="dados" type="submit" value="Dados">
 </body>
 </html>
