--- a/joao.html
+++ b/joao.html
@@ -26,10 +26,10 @@
     <h2>
         Terraria
     </h2>
-    <img src="imagens/terraria.png" alt="Terraria, o jogo onde voce joga até não aguentar mais">
+    <input id="sinopse" type="submit" value="Sinopse">
+    <input id="dados" type="submit" value="Dados">
+	<input id="imagens" type="submit" value="Imagens">
     <h3 id="titulo"></h3>
     <p id="texto"></p><br>
-    <input id="sinopse" type="submit" value="Sinópse">
-    <input id="dados" type="submit" value="Dados">
 </body>
 </html>
