--- a/thalles.html
+++ b/thalles.html
@@ -26,10 +26,11 @@
     <h2>
         Final Fantasy VI
     </h2>
-    <img src="imagens/ff6.png" alt="Final Fantasy VI, um clássico do SNES.">
+	<input id="sinopse" type="submit" value="Sinopse">
+    <input id="dados" type="submit" value="Dados">
+	<input id="imagens" type="submit" value="Imagens">
     <h3 id="titulo"></h3>
     <p id="texto"></p><br>
-    <input id="sinopse" type="submit" value="Sinópse">
-    <input id="dados" type="submit" value="Dados">
+    
 </body>
 </html>
