--- a/thaty.html
+++ b/thaty.html
@@ -26,10 +26,10 @@
     <h2>
         The Sims 4
     </h2>
-    <img src="imagens/ts4.png" alt="The Sims 4, o ápice do jogo de ter uma segunda vida.">
+    <input id="sinopse" type="submit" value="Sinopse">
+    <input id="dados" type="submit" value="Dados">
+	<input id="imagens" type="submit" value="Imagens">
     <h3 id="titulo"></h3>
     <p id="texto"></p><br>
-    <input id="sinopse" type="submit" value="Sinópse">
-    <input id="dados" type="submit" value="Dados">
 </body>
 </html>
