--- a/thaty.html
+++ b/thaty.html
@@ -26,9 +26,11 @@
     <h2>
         The Sims 4
     </h2>
-    <input id="sinopse" type="submit" value="Sinopse">
-    <input id="dados" type="submit" value="Dados">
+    <div class="botoes">
+        <input id="sinopse" type="submit" value="Sinopse">
+        <input id="dados" type="submit" value="Dados">
 	<input id="imagens" type="submit" value="Imagens">
+    </div>
     <h3 id="titulo"></h3>
     <p id="texto"></p><br>
 </body>
