--- a/home.html
+++ b/home.html
@@ -24,30 +24,29 @@
         </nav>
     </header>
 
-    <main>
+    
     <h2>Jogos Abordados</h2>
     <p>Clique sobre a imagem do jogo para acessar as páginas com detalhes.</p>
 
-    <div class="linha">
+    <main>
         <div class="jogo">
             <h3>Terraria</h3>
             <a href="joao.html">
-                <img src="imagens/terraria.png" alt="Terraria, o jogo onde voce joga até não aguentar mais" class="opacidade">
+                <img src="imagens/terraria.png" alt="Terraria, o jogo onde voce joga até não aguentar mais">
             </a>
         </div>
         <div class="jogo">
             <h3>The Sims 4</h3>
             <a href="thaty.html">
-                <img src="imagens/ts4.png" alt="The Sims 4, o ápice do jogo de ter uma segunda vida." class="opacidade">
+                <img src="imagens/ts4.png" alt="The Sims 4, o ápice do jogo de ter uma segunda vida." class="azul">
             </a>
         </div>
-		<div class="jogo">
+	<div class="jogo">
             <h3>Final Fantasy VI</h3>
             <a href="thalles.html">
-                <img src="imagens/ff6.png" alt="Final Fantasy VI, um clássico do SNES." class="opacidade">
+                <img src="imagens/ff6.png" alt="Final Fantasy VI, um clássico do SNES.">
             </a>
         </div>
-    </div>
     </main>
  </body>
 </html>
