--- a/thalles.html
+++ b/thalles.html
@@ -26,11 +26,9 @@
     <h2>
         Final Fantasy VI
     </h2>
-    <div class="botoes">
-        <input id="sinopse" type="submit" value="Sinopse">
-        <input id="dados" type="submit" value="Dados">
+	<input id="sinopse" type="submit" value="Sinopse">
+    <input id="gameplay" type="submit" value="Gameplay">
 	<input id="imagens" type="submit" value="Imagens">
-    </div>
     <h3 id="titulo"></h3>
     <p id="texto"></p><br>
     
