--- a/home.html
+++ b/home.html
@@ -24,29 +24,35 @@
         </nav>
     </header>
 
-    
+    <main>
     <h2>Jogos Abordados</h2>
     <p>Clique sobre a imagem do jogo para acessar as páginas com detalhes.</p>
 
-    <main>
+    <div class="linha">
         <div class="jogo">
             <h3>Terraria</h3>
             <a href="joao.html">
-                <img src="imagens/terraria.png" alt="Terraria, o jogo onde voce joga até não aguentar mais">
+                <img src="imagens/terraria.png" alt="Terraria, o jogo onde voce joga até não aguentar mais" class="opacidade">
             </a>
         </div>
         <div class="jogo">
             <h3>The Sims 4</h3>
             <a href="thaty.html">
-                <img src="imagens/ts4.png" alt="The Sims 4, o ápice do jogo de ter uma segunda vida." class="azul">
+                <img src="imagens/ts4.png" alt="The Sims 4, o ápice do jogo de ter uma segunda vida." class="opacidade">
             </a>
         </div>
-	<div class="jogo">
+		<div class="jogo">
             <h3>Final Fantasy VI</h3>
             <a href="thalles.html">
-                <img src="imagens/ff6.png" alt="Final Fantasy VI, um clássico do SNES.">
+                <img src="imagens/ff6.png" alt="Final Fantasy VI, um clássico do SNES." class="opacidade">
             </a>
         </div>
+    </div>
     </main>
+	<p>Gostou do site? Se sim, nos recomende um jogo para futuramente adicionarmos ele aqui também!</p>
+	<fieldset id="fieldset">
+	</fieldset>
+	<input type="text" id="entrada">
+	<input type="submit" id="add" value="Adicionar">
  </body>
 </html>
