--- a/joao.html
+++ b/joao.html
@@ -27,8 +27,8 @@
         Terraria
     </h2>
     <div class="botoes">
-    	<input id="sinopse" type="submit" value="Sinopse">
-    	<input id="dados" type="submit" value="Dados">
+    	<input id="sinopse" type="submit" value="Sobre o Jogo">
+    	<input id="dados" type="submit" value="Críticas e Notas">
 	<input id="imagens" type="submit" value="Imagens">
     </div>
     <h3 id="titulo"></h3>
