--- a/thaty.html
+++ b/thaty.html
@@ -27,8 +27,8 @@
         The Sims 4
     </h2>
     <div class="botoes">
-        <input id="sinopse" type="submit" value="Sinopse">
-        <input id="dados" type="submit" value="Dados">
+        <input id="sinopse" type="submit" value="Jogabilidade">
+        <input id="dados" type="submit" value="Notas e Críticas">
 	<input id="imagens" type="submit" value="Imagens">
     </div>
     <h3 id="titulo"></h3>
