--- a/joao.html
+++ b/joao.html
@@ -28,7 +28,7 @@
     </h2>
     <div class="botoes">
     	<input id="sinopse" type="submit" value="Sobre o Jogo">
-    	<input id="dados" type="submit" value="Críticas e Notas">
+    	<input id="dados" type="submit" value="Notas e Críticas">
 	<input id="imagens" type="submit" value="Imagens">
     </div>
     <h3 id="titulo"></h3>
